--- a/styles.css
+++ b/styles.css
@@ -299,3 +299,18 @@ nav {
     text-align: left;
     color: #fff;
 }
+
+/* Footer */
+
+footer {
+    background-color: #fff;
+}
+
+.footer__row {
+    padding: 8% 0;
+}
+
+.footer__logo--img {
+    width: 70px;
+    height: 70px;
+}
